--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
   "author": "Dennis Pagano",
   "license": "Apache-2.0",
   "dependencies": {
-    "argparse": "^1.0.10",
-    "glob": "^7.1.2"
+    "argparse": ">=1.0.10",
+    "glob": ">=7.1.2"
   },
   "repository": {
     "type": "git",
     "url": "git://github.com/dpagano/closure-coverage-merger.git"
   },
   "devDependencies": {
-    "chai": "^4.1.2",
-    "mocha": "^5.0.1"
+    "chai": ">=4.1.2",
+    "mocha": ">5.0.1"
   }
 }
